Revision history for Perl extension AnyEvent.

4.22
	- new function AnyEvent::Socket::parse_hostport.

4.21 Thu Jul 17 14:40:05 CEST 2008
	- INCOMPATIBLE CHANGE: AnyEvent::Util::fork_call now has a prototype
          which is incompatible to previous invocation syntax.
        - work around more windows perl bugs in fork_call. I cannot imagine
          why anybody would bother implementing fork in such an obviously
          unusable way.
	- avoid calling $do_retry if the request has already finished in
          AnyEvent::DNS, thus avoiding an exception (reported by Anatoly
          K. Sharifulin).

4.2  Sat Jul 12 22:42:11 CEST 2008
	- support an "interval" argument for repeating timers.
        - fix a bug in the pure perl event loop that caused timers to
          be delayed under some circumstances.
        - implement optional argument checking via PERL_ANYEVENT_STRICT.
	- not importing anything from Event causes it to malfunction
          and not use Time::HiRes, work around this bug.
        - more bug workarounds against the endlessly broken Tk module,
          seems to work now on 32 bit machines, but less so on 64 bit.
        - minor optimisations applied to most backends.

4.161 Fri Jul  4 14:24:48 CEST 2008
        - fixed the t/handle/02_write.t, it read after write, with the
          assumption that all data could be written before read
          (reported by Jim Razmus).

4.160 Thu Jul  3 04:02:21 CEST 2008
	- re-registering signal watchers after unregistering one did
          not work if a backend falls back on AnyEvent's default
          implementation (also affected child watchers).
	- new AnyEvent::Handle options: autocork and no_delay.

4.152 Sun Jun 22 14:15:44 CEST 2008
	- allow for 32-bit perls that implement shifts differently
          on different architectures in parse_ipv4 (reported and
          analysed by Keiichi DAIBA).

4.151 Fri Jun  6 17:34:24 CEST 2008
	- make sure specifying _only_ on_read and never pushing reads