@@ -2,6 +2,10 @@ Revision history for Perl extension AnyEvent.
 
 4.22
 	- new function AnyEvent::Socket::parse_hostport.
+        - as the bulkheads at microsoft can't even get getprotobyname reliably
+          working on their shitty fucking broken os we need to hardcode
+          some common protocol numbers in AnyEvent::Socket. How can
+          people even bother with such a pile of shit as windows.
 
 4.21 Thu Jul 17 14:40:05 CEST 2008
 	- INCOMPATIBLE CHANGE: AnyEvent::Util::fork_call now has a prototype
